--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -29,6 +29,200 @@
     {% else %}
     <title>Sen's Sphere</title>
     {%endif%}
+
+    <style>
+      body {
+        background: #fafafa;
+        color: #333333;
+        margin-top: 5rem;
+      }
+      
+      h1, h2, h3, h4, h5, h6 {
+        color: #444444;
+      }
+      
+      ul {
+        margin: 0;
+      }
+      
+      .bg-steel {
+        background-color: #5f788a;
+      }
+      
+      .site-header .navbar-nav .nav-link {
+        color: #cbd5db;
+      }
+      
+      .site-header .navbar-nav .nav-link:hover {
+        color: #ffffff;
+      }
+      
+      .site-header .navbar-nav .nav-link.active {
+        font-weight: 500;
+      }
+      
+      .content-section {
+        background: #ffffff;
+        padding: 10px 20px;
+        border: 1px solid #dddddd;
+        border-radius: 3px;
+        margin-bottom: 20px;
+      }
+      
+      .article-title {
+        color: #444444;
+      }
+      
+      a.article-title:hover {
+        color: #428bca;
+        text-decoration: none;
+      }
+      
+      .article-content {
+        white-space: pre-line;
+      }
+      
+      .article-img {
+        height: 65px;
+        width: 65px;
+        margin-right: 16px;
+      }
+      
+      .article-metadata {
+        padding-bottom: 1px;
+        margin-bottom: 4px;
+        border-bottom: 1px solid #e3e3e3
+      }
+      
+      .article-metadata a:hover {
+        color: #333;
+        text-decoration: none;
+      }
+      
+      .article-svg {
+        width: 25px;
+        height: 25px;
+        vertical-align: middle;
+      }
+      
+      .account-img {
+        height: 125px;
+        width: 125px;
+        margin-right: 20px;
+        margin-bottom: 16px;
+      }
+      
+      .account-heading {
+        font-size: 2.5rem;
+      }
+    
+      .google-button {
+        color: white;
+        background-color: #4285F4;
+        font-weight: 500;
+        border-radius: 0.5rem;
+        font-size: 0.875rem;
+        padding: 0.625rem 1.25rem;
+        text-align: center;
+        display: inline-flex;
+        align-items: center;
+        margin-bottom: 0.5rem;
+        margin-inline-end: 0.5rem;
+        border: none;
+        cursor: pointer;
+        transition: background-color 0.2s ease;
+    }
+    
+    .google-button:hover {
+        background-color: #357ae8; /* Darker shade for hover */
+    }
+    
+    .google-button:focus {
+        outline: none;
+        box-shadow: 0 0 0 4px rgba(66, 133, 244, 0.5);
+    }
+    
+    .google-button:focus-visible {
+        outline: none;
+    }
+    
+    .google-icon {
+        width: 1rem;
+        height: 1rem;
+        margin-inline-end: 0.5rem;
+    }
+    
+    .dark .google-button:focus {
+        box-shadow: 0 0 0 4px rgba(66, 133, 244, 0.55);
+    }
+    .google-button {
+      color: white;
+      background-color: #996643;
+      font-weight: 500;
+      border-radius: 0.5rem;
+      font-size: 0.875rem;
+      padding: 0.8rem 1.25rem;
+      margin-left: 0.9rem;
+      text-align: center;
+      display: inline-flex;
+      align-items: center;
+      margin-inline-end: 0.5rem;
+      border: none;
+      cursor: pointer;
+      transition: background-color 0.2s ease;
+  }
+  
+  .google-button:hover {
+      background-color: #357ae8; /* Darker shade for hover */
+  }
+  
+  .google-button:focus {
+      outline: none;
+      box-shadow: 0 0 0 4px rgba(66, 133, 244, 0.5);
+  }
+  
+  .google-button:focus-visible {
+      outline: none;
+  }
+  
+  .google-icon {
+      width: 1rem;
+      height: 1rem;
+      margin-inline-end: 0.5rem;
+  }
+  
+  .dark .google-button:focus {
+      box-shadow: 0 0 0 4px rgba(66, 133, 244, 0.55);
+  }
+  
+  .anchor_login{
+      color:antiquewhite;
+  }
+  .anchor_login:hover{
+      color: antiquewhite;
+  }
+  
+  @media (max-width: 768px) {
+      .logo {
+          width: 120px; /* Adjust width for smaller screens */
+      }
+  }
+  
+  @media (max-width: 480px) {
+      .logo {
+          width: 100px; /* Further adjust width for very small screens */
+      }
+  }
+  .ss_logo{
+      width: 70px; 
+      height: auto; 
+      display: block; 
+      padding: 7px; 
+      margin-right: 5px;
+      border-radius: 18px;
+  }
+
+    </style>
   </head>
   <body style="background: #e7e8d8">
     <header class="site-header">
