--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,7 +4,7 @@
     <article class="media content-section">
       {% if object.author.profile %}
       <img class="rounded-circle article-img" src="{{ object.author.profile.image.url }}" >
-      
+      {% endif %}
         <div class="media-body">
           <div class="article-metadata">
             <a class="mr-2" href="{% url 'user-posts' object.author.username %}">{{ object.author }}</a>
